--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "euroautoparts-googlesheets-api",
-  "module": "index.ts",
+  "module": "index.js",
   "type": "module",
   "scripts": {
-    "start": "bun run index.ts",
-    "dev": "bun --hot run index.ts"
+    "start": "bun run index.js",
+    "dev": "bun --hot run index.js"
   },
   "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
+    "@types/bun": "latest",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.12",
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "googleapis": "^137.1.0"
   }
 }
