--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: euroautoparts-googlesheets-api
+  namespace: prod
   labels:
     app: euroautoparts-googlesheets-api
 spec:
