--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,18 +17,31 @@ spec:
     spec:
       containers:
         - name: euroautoparts-googlesheets-api
-          image: 192.168.1.108:5000/euroautoparts-googlesheets-api:latest
+          image: ghcr.io/win-ts/euroautoparts-googlesheets-api:x86
           imagePullPolicy: Always
           ports:
             - containerPort: 4000
               protocol: TCP
           resources:
             requests:
-              memory: "64Mi"
-              cpu: "100m"
+              memory: "256Mi"
+              cpu: "150m"
             limits:
-              memory: "128Mi"
-              cpu: "200m"
+              memory: "512Mi"
+              cpu: "300m"
           envFrom:
             - secretRef:
                 name: landing-page-secret
+          env:
+            - name: GOOGLE_APPLICATION_CREDENTIALS
+              value: "/etc/gcp-credentials/gcp-credentials.json"
+          volumeMounts:
+            - name: gcp-credentials
+              mountPath: "/etc/gcp-credentials"
+              readOnly: true
+      volumes:
+        - name: gcp-credentials
+          secret:
+            secretName: gcp-credentials
+      imagePullSecrets:
+        - name: ghcr-secret
